--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,17 @@
 <html>
 <head>
-     
+    <script src="../lib/handlebars.runtime.js" type="text/javascript"></script>
+    <script src="../lib/rdf_store.js" type="text/javascript"></script>
+    <script src="uduvudu.js" type="text/javascript"></script>
+
 </head>
 <body>
+    <div id="main">
+    </div>
+
+    <script type="text/javascript">
+        var element = document.getElementById('main');
+        element.innerHTML = main();
+    </script>
 </body>
 </html>
