--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <script src="../lib/underscore.js" type="text/javascript"></script>
     <script src="../lib/handlebars.runtime.js" type="text/javascript"></script>
     <script src="../lib/rdf_store.js" type="text/javascript"></script>
     <script src="uduvudu.js" type="text/javascript"></script>
