--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <head>
     <script src="../lib/underscore.js" type="text/javascript"></script>
     <script src="../lib/jquery-1.10.2.min.js" type="text/javascript"></script>
-    <script src="../lib/handlebars.runtime.js" type="text/javascript"></script>
+    <script src="../lib/handlebars.js" type="text/javascript"></script>
     <script src="../lib/rdf_store.js" type="text/javascript"></script>
     <script src="uduvudu.js" type="text/javascript"></script>
 
