and an input for freeform

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <div class="container">
         <div id="chooser">
             <form class="form-inline" role="form">
+                <input id="setRDF" type="text" class="form-control"></input>
                 <select id="selectRDF" class="form-control">
                     <option>Select a sample RDF URI</option>
                     <option>http://beta.fusepool.com/ecs/meta?iri=http%3A%2F%2Ffusepool.info%2Fdoc%2Fpatent%2FEP-1006123-A2</option>
@@ -29,6 +30,16 @@
     <script type="text/javascript">
         // prepare templates
         $("#templates").load("templates.html");
+
+        $('#setRDF').on('keyup', function() {
+            var store = rdfstore.create();
+            store.execute('LOAD <'+this.value+'>\
+                           INTO GRAPH <inputgraph>', function(success){
+                if(success) {
+                    $("#main").html(main(store));
+                };
+            })
+        });
 
         $('#selectRDF').on('change', function() {
             var store = rdfstore.create();
