--- a/src/templates.html
+++ b/src/templates.html
@@ -31,3 +31,10 @@
     <p>{{text}}</p>
   </div>
 </script>
+
+<script id="label_comment" type="text/x-handlebars-template">
+  <div>
+    <h1>{{label}}</h1>
+    <p>{{comment}}</p>
+  </div>
+</script>
