Added some simple base types

--- a/src/templates.html
+++ b/src/templates.html
@@ -17,9 +17,7 @@
   </table>
 </script>
 
-<script id="foaf:img" type="text/x-handlebars-template">
-  <img src="{{img}}" />
-</script>
+
 
 <script id="title" type="text/x-handlebars-template">
   <h1>{{title}}</h1>
@@ -38,3 +36,29 @@
     <p>{{comment}}</p>
   </div>
 </script>
+
+<!-- foaf:Image -->
+<script id="img" type="text/x-handlebars-template">
+  <img src="{{img}}" />
+</script>
+
+<!-- foaf:Image -->
+<script id="img_alt" type="text/x-handlebars-template">
+  <img src="{{img}}" alt="{{alt}}"/>
+</script>
+
+<!-- foaf:Document -->
+<script id="uri" type="text/x-handlebars-template">
+  <a href="{{uri}}}" />
+</script>
+
+<!-- foaf:Document -->
+<script id="uri_text" type="text/x-handlebars-template">
+  <a href="{{uri}}">{{text}}</a>
+</script>
+
+<!-- rdfs:Literal -->
+<script id="text" type="text/x-handlebars-template">
+  <div>{{text}}</div>
+</script>
+
