--- a/src/templates.html
+++ b/src/templates.html
@@ -38,3 +38,8 @@
     <p>{{comment}}</p>
   </div>
 </script>
+
+<script id="unknown" type="text/x-handlebars-template">
+  <p>{{predicate}}: {{object}}</p>
+</script>
+
