first version recursive

--- a/src/templates.html
+++ b/src/templates.html
@@ -105,8 +105,9 @@ URI in comment refers to the class of the object in rdf:range
 <script id="text" type="text/x-handlebars-template">
   <div>{{text}}</div>
 </script>
+
 <!-- unknown -->
 <script id="unknown" type="text/x-handlebars-template">
-  <p>{{predicate}}: {{object}}</p>
+  <p>{{{subject}}} &#9608; {{{predicate}}} &#9608; {{{object}}}</p>
 </script>
 
