first combined templates working

--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,15 @@
                 <select id="selectRDF" class="form-control">
                     <option>Select a sample RDF URI</option>
                     <option data-res="http://dbpedia.org/resource/Bern_University_of_Applied_Sciences">examples/Bern_University_of_Applied_Sciences.ttl</option>
-                    <option>examples/Rolex.ttl</option>
-                    <option>examples/Test.ttl</option>
-                    <option>examples/TimBernersLee.ttl</option>
+                    <option data-res="http://dbpedia.org/resource/Rolex">examples/Rolex.ttl</option>
+                    <!--     <option>examples/TimBernersLee.ttl</option>-->
                     <option data-res="http://dbpedia.org/resource/Brig-Glis">examples/Brig-Glis.ttl</option>
                     <option data-res="http://vmikarus.bfh.ch/data/messages/b1bdf255-ed5a-43b1-b968-1e27991f2c02">http://vmikarus.bfh.ch/data/messages/b1bdf255-ed5a-43b1-b968-1e27991f2c02</option>
-                    <option>http://dbpedia.org/data/Bern.ttl</option>
+                    <!--                    <option>http://dbpedia.org/data/Bern.ttl</option>
                     <option>http://beta.fusepool.com/ecs/meta?iri=http%3A%2F%2Ffusepool.info%2Fdoc%2Fpatent%2FEP-1006123-A2</option>
                     <option>http://beta.fusepool.com/ecs/meta?iri=http%3A%2F%2Ffusepool.info%2Fdoc%2Fpmc%2F3276788</option>
                     <option>http://beta.fusepool.com/ecs/meta?iri=http%3A%2F%2Ffusepool.info%2Fdoc%2Fpatent%2FEP-1012647-A1</option>
+                    -->
                 </select>
             </form> 
         </div>
