example with javscript working

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
                     <option data-res="http://dbpedia.org/resource/Rolex">examples/Rolex.ttl</option>
                     <!--     <option>examples/TimBernersLee.ttl</option>-->
                     <option data-res="http://dbpedia.org/resource/Brig-Glis">examples/Brig-Glis.ttl</option>
+                    <option data-res="http://data.admin.ch/bfs/municipality/13228">http://data.admin.ch/bfs/municipality/13228</option>
                     <option data-res="http://vmikarus.bfh.ch/data/messages/b1bdf255-ed5a-43b1-b968-1e27991f2c02">http://vmikarus.bfh.ch/data/messages/b1bdf255-ed5a-43b1-b968-1e27991f2c02</option>
                     <!--                    <option>http://dbpedia.org/data/Bern.ttl</option>
                     <option>http://beta.fusepool.com/ecs/meta?iri=http%3A%2F%2Ffusepool.info%2Fdoc%2Fpatent%2FEP-1006123-A2</option>
