--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
                     <option data-res="http://dbpedia.org/resource/Brig-Glis">examples/Brig-Glis.ttl</option>
                     <option data-res="http://data.admin.ch/bfs/municipality/13228">http://data.admin.ch/bfs/municipality/13228</option>
                     <option data-res="http://vmikarus.bfh.ch/data/messages/b1bdf255-ed5a-43b1-b968-1e27991f2c02">http://vmikarus.bfh.ch/data/messages/b1bdf255-ed5a-43b1-b968-1e27991f2c02</option>
+                    <option data-res="http://fusepool.info/doc/patent/EP-1001818-A1">http://localhost:8080/ecs/meta?iri=http://fusepool.info/doc/patent/EP-1001818-A1&header_Accept=text/turtle&xPropObj=http%3A%2F%2Fwww.patexpert.org%2Fontologies%2Fpmo.owl%23inventor&xPropObj=http%3A%2F%2Fwww.patexpert.org%2Fontologies%2Fpmo.owl%23classifiedAs</option>
+                    
                     <!--                    <option>http://dbpedia.org/data/Bern.ttl</option>
                     <option>http://beta.fusepool.com/ecs/meta?iri=http%3A%2F%2Ffusepool.info%2Fdoc%2Fpatent%2FEP-1006123-A2</option>
                     <option>http://beta.fusepool.com/ecs/meta?iri=http%3A%2F%2Ffusepool.info%2Fdoc%2Fpmc%2F3276788</option>
