--- a/src/templates.html
+++ b/src/templates.html
@@ -13,7 +13,9 @@ URI in comment refers to the class of the object in rdf:range
 </script>
 
 <script id="text" type="text/x-handlebars-template">
+  <div style="height: 200px; width: 200px; float: left; overflow: scroll;">
   <p>{{text.u}}</p>
+  </div>
 </script>
 
 <script id="person_name" type="text/x-handlebars-template">
@@ -27,39 +29,45 @@ URI in comment refers to the class of the object in rdf:range
 </script>
 
 <script id="neighboringMunicipalities" type="text/x-handlebars-template">
-   <p><b>Neighboring Municipalities:</b> 
+  <div style="height: 200px; width: 200px; float: left; overflow: scroll;">
+  <p><b>Neighboring Municipalities:</b><br /> 
   {{#each neighboringMunicipalities.u}}<a href="?uri={{this}}">&#9608;</a> {{/each}}
   </p>
+  </div>
 </script>
 
 <script id="license" type="text/x-handlebars-template">
+  <div style="height: 200px; width: 200px; float: left; overflow: scroll;">
     <p><small>{{#if license.u}}&copy; {{license.u}}{{else}}&copy; <a href="{{uri.u}}">{{uri.u}}</a>{{/if}}</small></p>
+  </div>
 </script>
 
 <script id="title_text" type="text/x-handlebars-template">
-  <div>
+  <div style="height: 200px; width: 400px; float: left; overflow: scroll;">
     <h1>{{title}}</h1>
     <p>{{text}}</p>
   </div>
 </script>
 
 <script id="community" type="text/x-handlebars-template">
-  <div>
-    <img style="max-width: 400px" src="{{img_url.u}}" class="img-responsive pull-right" />
+  <div style="height: 200px; width: 400px; background-color: lightgrey; padding: 4px; float: left; overflow: scroll;">
+  <div style="width: 200px; height: 200px; overflow: hidden; margin: -4px;" class="pull-right">
+    <img style="min-width: 200px; min-height: 200px; max-width: 300px; max-height: 300px" src="{{img_url.u}}" />
+  </div>
     <h1>{{title.u}}</h1>
     <p>{{text.u}}</p>
   </div>
 </script>
 
 <script id="label_comment" type="text/x-handlebars-template">
-    <div>
+    <div style="height: 200px; width: 400px; float: left; overflow: scroll; padding: 4px;">
     <h1>{{title.u}}</h1>
     <p>{{text.u}}</p>
   </div>
 </script>
 
 <script id="location" type="text/x-handlebars-template">
-    <div id="map-canvas" style="height: 200px; width: 200px">
+    <div id="map-canvas" style="height: 200px; width: 200px; float: left;">
         <big>&#8982;</big> {{lat.u}} / {{long.u}}
     </div> 
 </script>
@@ -84,20 +92,14 @@ URI in comment refers to the class of the object in rdf:range
   </div>
 </script>-->
 
-<!-- <script id="img" type="text/x-handlebars-template">
-  <img style="max-width: 400px" src="{{img_url.u}}" class="img-responsive" />
-</script>-->
-
-<script id="uri_text" type="text/x-handlebars-template">
-  <a href="{{uri.u}}">{{text.u}}</a>
-</script>
-
-<script id="text" type="text/x-handlebars-template">
-  <div>{{text.u}}</div>
+<script id="img" type="text/x-handlebars-template">
+  <div style="width: 200px; height: 200px; float: left">
+  <img style="min-width: 200px; min-height: 200px;" src="{{img_url.u}}" class="img-responsive" />
+  </div>
 </script>
 
 <script id="literal" type="text/x-handlebars-template">
-    <p><b>{{{name.u}}}</b>: {{{text.u}}}</p>
+    <div style="width: 200px; height: 200px; float: left"><p><b>{{{name.u}}}</b>:<br /> {{{text.u}}}</p></div>
 </script>
 
 <!-- void -->
