--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 
-    <link href="../lib/bootstrap.min.css" rel="stylesheet">
-    <script src="../lib/underscore.js" type="text/javascript"></script>
-    <script src="../lib/jquery-1.10.2.min.js" type="text/javascript"></script>
-    <script src="../lib/handlebars.js" type="text/javascript"></script>
-    <script src="../lib/rdf_store.js" type="text/javascript"></script>
-    <script src="uduvudu.js" type="text/javascript"></script>
+    <link href="lib/bootstrap.min.css" rel="stylesheet">
+    <script src="lib/underscore.js" type="text/javascript"></script>
+    <script src="lib/jquery-1.10.2.min.js" type="text/javascript"></script>
+    <script src="lib/handlebars.js" type="text/javascript"></script>
+    <script src="lib/rdf_store.js" type="text/javascript"></script>
+    <script src="src/uduvudu.js" type="text/javascript"></script>
 
 </head>
 <body>
