clean up of texts

--- a/index.html
+++ b/index.html
@@ -17,18 +17,16 @@
                 <select id="selectRDF" class="form-control">
                     <option>Select a sample RDF URI</option>
                     <option data-res="http://dbpedia.org/resource/Bern_University_of_Applied_Sciences">examples/Bern_University_of_Applied_Sciences.ttl</option>
+                    <option data-res="http://dbpedia.org/resource/Bern_University_of_Applied_Sciences">http://dbpedia.org/data/Bern_University_of_Applied_Sciences.ttl</option>
                     <option data-res="http://dbpedia.org/resource/Rolex">examples/Rolex.ttl</option>
+                    <option data-res="http://dbpedia.org/resource/Rolex">http://dbpedia.org/data/Rolex.ttl</option>
                     <!--     <option>examples/TimBernersLee.ttl</option>-->
                     <option data-res="http://dbpedia.org/resource/Brig-Glis">examples/Brig-Glis.ttl</option>
+                    <option data-res="http://dbpedia.org/resource/Bern">http://dbpedia.org/data/Bern.ttl</option>
                     <option data-res="http://data.admin.ch/bfs/municipality/13228">http://data.admin.ch/bfs/municipality/13228</option>
                     <option data-res="http://vmikarus.bfh.ch/data/messages/b1bdf255-ed5a-43b1-b968-1e27991f2c02">http://vmikarus.bfh.ch/data/messages/b1bdf255-ed5a-43b1-b968-1e27991f2c02</option>
                     <option data-res="http://fusepool.info/doc/patent/EP-1001818-A1">http://localhost:8080/ecs/meta?iri=http://fusepool.info/doc/patent/EP-1001818-A1&header_Accept=text/turtle&xPropObj=http%3A%2F%2Fwww.patexpert.org%2Fontologies%2Fpmo.owl%23inventor&xPropObj=http%3A%2F%2Fwww.patexpert.org%2Fontologies%2Fpmo.owl%23classifiedAs</option>
                     
-                    <!--                    <option>http://dbpedia.org/data/Bern.ttl</option>
-                    <option>http://beta.fusepool.com/ecs/meta?iri=http%3A%2F%2Ffusepool.info%2Fdoc%2Fpatent%2FEP-1006123-A2</option>
-                    <option>http://beta.fusepool.com/ecs/meta?iri=http%3A%2F%2Ffusepool.info%2Fdoc%2Fpmc%2F3276788</option>
-                    <option>http://beta.fusepool.com/ecs/meta?iri=http%3A%2F%2Ffusepool.info%2Fdoc%2Fpatent%2FEP-1012647-A1</option>
-                    -->
                 </select>
             </form> 
         </div>
