--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <html>
 <head>
-
     <link href="lib/bootstrap.min.css" rel="stylesheet">
-    <script src="lib/underscore.js" type="text/javascript"></script>
+    <script src="lib/underscore-1.5.1.js" type="text/javascript"></script>
     <script src="lib/jquery-1.10.2.min.js" type="text/javascript"></script>
-    <script src="lib/handlebars.js" type="text/javascript"></script>
+    <script src="lib/handlebars-v1.3.0.js" type="text/javascript"></script>
     <script src="lib/rdf_store.js" type="text/javascript"></script>
     <script src="src/uduvudu.js" type="text/javascript"></script>
-
 </head>
 <body>
     <div class="container">
@@ -16,17 +14,14 @@
                 <input id="setRDF" type="text" class="form-control"></input>
                 <select id="selectRDF" class="form-control">
                     <option>Select a sample RDF URI</option>
+                    <option data-res="http://dbpedia.org/resource/Brig-Glis">examples/Brig-Glis.ttl</option>
+                    <option data-res="http://data.admin.ch/bfs/municipality/13228">http://data.admin.ch/bfs/municipality/13228</option>
+                    <option data-res="http://dbpedia.org/resource/Brig-Glis">http://dbpedia.org/data/Brig-Glis.ttl</option>
                     <option data-res="http://dbpedia.org/resource/Bern_University_of_Applied_Sciences">examples/Bern_University_of_Applied_Sciences.ttl</option>
                     <option data-res="http://dbpedia.org/resource/Bern_University_of_Applied_Sciences">http://dbpedia.org/data/Bern_University_of_Applied_Sciences.ttl</option>
                     <option data-res="http://dbpedia.org/resource/Rolex">examples/Rolex.ttl</option>
                     <option data-res="http://dbpedia.org/resource/Rolex">http://dbpedia.org/data/Rolex.ttl</option>
-                    <!--     <option>examples/TimBernersLee.ttl</option>-->
-                    <option data-res="http://dbpedia.org/resource/Brig-Glis">examples/Brig-Glis.ttl</option>
                     <option data-res="http://dbpedia.org/resource/Bern">http://dbpedia.org/data/Bern.ttl</option>
-                    <option data-res="http://data.admin.ch/bfs/municipality/13228">http://data.admin.ch/bfs/municipality/13228</option>
-                    <option data-res="http://vmikarus.bfh.ch/data/messages/b1bdf255-ed5a-43b1-b968-1e27991f2c02">http://vmikarus.bfh.ch/data/messages/b1bdf255-ed5a-43b1-b968-1e27991f2c02</option>
-                    <option data-res="http://fusepool.info/doc/patent/EP-1001818-A1">http://localhost:8080/ecs/meta?iri=http://fusepool.info/doc/patent/EP-1001818-A1&header_Accept=text/turtle&xPropObj=http%3A%2F%2Fwww.patexpert.org%2Fontologies%2Fpmo.owl%23inventor&xPropObj=http%3A%2F%2Fwww.patexpert.org%2Fontologies%2Fpmo.owl%23classifiedAs</option>
-                    
                 </select>
             </form> 
         </div>
