--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="lib/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script src="lib/handlebars-v1.3.0.js" type="text/javascript"></script>
     <script src="lib/rdf_store.js" type="text/javascript"></script>
+    <script src="selector.js" type="text/javascript"></script>
     <script src="src/uduvudu.js" type="text/javascript"></script>
 </head>
 <body>
@@ -28,11 +29,11 @@
         <div id="main">
         </div>
     </div>
-    <div id="templates">
+    <div id="visualizer">
     </div>
     <script type="text/javascript">
         // prepare templates
-        $("#templates").load("templates.html");
+        $("#visualizer").load("visualizer.html");
 
         // helper to get the get query
         function getParameterByName(name) {
@@ -77,8 +78,8 @@
         });
 
         $('#selectRDF').on('change', function(event) {
-
-            loadFromSource(this.value, event.target.selectedOptions[0].attributes['data-res'].nodeValue);
+            //loadFromSource(this.value, event.target.selectedOptions[0].attributes['data-res'].nodeValue);
+            loadFromSource(this.value);
         });
 
 
